src/objects/MICO_Design__c.object
<CustomObject>
    <description>Business Description: This object is used to store designs for user stories. A design can be linked to many user stories and a user story linked to many designs.

Used In: Mission Control App</description>
    <fields>
        <fullName>Apex_Classes__c</fullName>
        <inlineHelpText>A list of apex classes (incuding test classes) used by this design</inlineHelpText>
        <label>Apex Classes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apex_Trigger__c</fullName>
        <label>Apex Trigger</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>App</label>
        <referenceTo>MICO_App__c</referenceTo>
        <relationshipLabel>Designs</relationshipLabel>
        <relationshipName>MICO_Designs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will capture the status of approval for design records. It will be auto-populated through the workflow process: Created on 23/07/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>The status of the approval. This is auto populated as the design goes through the process.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>This will determine the amount of risk and amount of detailed design required.</inlineHelpText>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Model__c</fullName>
        <label>Data Model</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Design_ready_for_Approval__c</fullName>
        <formula>IF((NOT(ISBLANK( MICO_Approver__c)) &amp;&amp; ISPICKVAL(Approval_Status__c, &quot;Open&quot;)),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Design ready for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICO_Approval_Date__c</fullName>
        <description>This field will capture the date and time when design gets approved: Created on 23/07/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>Date this has been approved by SME</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MICO_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will capture the name of the approver for approving designs: Created on 23/07/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>Your signature indicates that the design specifications are technically accurate, address how the computer system requirements are met, meet the requirements of LQP-302-16 and are traceable to one or more requirement.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MICO_Rejection_Reason__c</fullName>
        <description>This field records the reason that the Design record is not valid. It is to be filled only when Approval status equals rejected: Created on 23/07/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>The reason this Design is not valid. This should only be used if the Approval Status is Rejected</inlineHelpText>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objects__c</fullName>
        <label>Objects</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Components__c</fullName>
        <inlineHelpText>A list of other components related to this design, e.g. SAP scripts etc</inlineHelpText>
        <label>Other Components</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Page_Layouts__c</fullName>
        <label>Page Layouts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Designs</relationshipLabel>
        <relationshipName>MICO_Designs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <formula>IF( (Is_Design_ready_for_Approval__c==&quot;No&quot;),
IF( ISBLANK(MICO_Approver__c), &quot;Please select an Approver before submitting a Design for approval.&quot;,
IF(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;) , &quot;This Design has already been Approved and cannot be resubmitted for approval. &quot;,IF(ISPICKVAL(Approval_Status__c, &quot;Rejected&quot;) , &quot;This Design has been Rejected and cannot be resubmitted for approval. &quot;,IF(ISPICKVAL(Approval_Status__c, &quot;Pending Approval&quot;) , &quot;This Design is Pending Approval and cannot be resubmitted for approval. &quot;,&quot;&quot;) )) ),&quot;This Design is ready for approval.&quot;

 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unlock_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to unlock an approved design for editing. Validation rule to lock design record will be based on this field:Created on 25/07/2014 by Preeti Grover:MICO</description>
        <inlineHelpText>Check to unlock design for editing and send for approval after making changes</inlineHelpText>
        <label>Unlock Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visualforce_Pages__c</fullName>
        <inlineHelpText>A list of Visualforce pages used by this design</inlineHelpText>
        <label>Visualforce Pages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Design</label>
    <listViews>
        <fullName>AllDesigns</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>2) All Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllSprintDesigns</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>1) All Sprint Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MICO_Project_ACE_Digital_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>ACE Digital Dashboard</value>
        </filters>
        <label>Project: ACE Digital Dashboard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyDesigns</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>0) My Designs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_C3</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>C3</value>
        </filters>
        <label>Project: C3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_HCP_Transparency_Smart_Forms</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>HCP Transparency Smart Form</value>
        </filters>
        <label>Project: HCP Transparency Smart Form</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_IRiSS</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>IRiSS</value>
        </filters>
        <label>Project: IRiSS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_LaunchPad</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>LaunchPad</value>
        </filters>
        <label>Project: LaunchPad</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_NTM</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>NTM</value>
        </filters>
        <label>Project: NTM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_RWE_Knowledge_Management</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>RWE Knowledge Management</value>
        </filters>
        <label>Project: RWE Knowledge Management</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_SAP_Material_Data</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>SAP Material Data</value>
        </filters>
        <label>Project: SAP Material Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_Stand_Up_Cirrus</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Stand Up Cirrus</value>
        </filters>
        <label>Project: Stand Up Cirrus</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Project_Trialforce_Migration</fullName>
        <columns>NAME</columns>
        <columns>Overview__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Trialforce Migration</value>
        </filters>
        <label>Project: Trialforce Migration</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designs</pluralLabel>
    <recordTypes>
        <fullName>Data_Migration</fullName>
        <active>false</active>
        <description>To record Data Migration Design details</description>
        <label>Data Migration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration</fullName>
        <active>false</active>
        <description>To record Integration Design details</description>
        <label>Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sprint</fullName>
        <active>true</active>
        <description>To record Sprint Design details</description>
        <label>Sprint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MICO_Approver_Validation</fullName>
        <active>true</active>
        <description>The approver cannot be the same as submitter</description>
        <errorConditionFormula>MICO_Approver__c   =   $User.Id</errorConditionFormula>
        <errorMessage>The submitter can not be the approver of the Design. Please select a valid user to approve the request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MICO_Lock_Design</fullName>
        <active>false</active>
        <description>This rule will lock the design record after it has been approved.</description>
        <errorConditionFormula>AND( OR (ISCHANGED(Data_Model__c), 
ISCHANGED(Overview__c ),
 ISCHANGED( Fields__c ),
 ISCHANGED( Objects__c ),
 ISCHANGED( Page_Layouts__c),
 ISCHANGED( Fields__c),
 ISCHANGED( Other_Components__c)),    
(ISPICKVAL(Approval_Status__c,&quot;Approved&quot;)),
(Unlock_Design__c  = FALSE ))</errorConditionFormula>
        <errorMessage>You can&apos;t amend the Design at this stage in the Design lifecycle. If you need to make an agreed change, check the &quot;Unlock Design&quot; flag and Chatter why you are making a change. The Design should be sent for approval after the agreed changes have been made</errorMessage>
    </validationRules>
</CustomObject>